--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
+    <main class="home">
+        <section class="home__pokemon">
+            <ul class="home__list">
+                <!-- <li class="list__pokemon">
+                    <img class="pokemon__image" src=<%=require("./assets/heart.png")%> alt="pokemon image">
+                    <div class="pokemon__info-container">
+                        <p>pokemon 1</p>
+                        <div class="pokemon__icon-container">
+                            <img class="pokemon__heart-icon" src=<%=require("./assets/heart.png")%> alt="like icon">
+                            <p>?? likes</p>
+                        </div>
+                    </div>
+                    <button class="pokemon__button comments">Comments</button>
+                    <button class="pokemon__button reservation">Reservations</button>
+                </li> -->
+            </ul>
+        </section>
+    </main>
     <script src="./index.js"></script>
 </body>
 </html>
