--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Pokemon website</title>
 </head>
 <body>
     <main class="home">
+        <nav>
+            <img class="home__logo" src=<%=require("./assets/pokemon-symbol-logo-png-31.png")%> alt="Website logo">
+            <h1 class="home__pokemon-amount">Pokemon (9)</h1>
+            <p>Pokedex</p>
+            <p>About</p>
+        </nav>
         <section class="home__pokemon">
             <ul class="home__list">
                 <!-- <li class="list__pokemon">
@@ -23,6 +29,9 @@
                 </li> -->
             </ul>
         </section>
+        <footer>
+            <p class="footer__p">Created by Microverse under CC license</p>
+        </footer>
     </main>
 </body>
 </html>
