make counter home function

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <main class="home">
         <nav>
             <img class="home__logo" src=<%=require("./assets/pokemon-symbol-logo-png-31.png")%> alt="Website logo">
-            <h1 class="home__pokemon-amount">Pokemon (9)</h1>
+            <h1 class="home__pokemon-amount"></h1>
             <p>Pokedex</p>
             <p>About</p>
         </nav>
